--- a/src/pages/Login/components/Card/Card.css
+++ b/src/pages/Login/components/Card/Card.css
@@ -4,6 +4,13 @@
   background: #f5f5f5;
   display: flex;
   flex-direction: column;
-  gap: 37px;
   padding: 80px 105px;
+}
+
+.loginLogo {
+  margin-bottom: 85px;
+}
+
+.inputLogin {
+  margin-bottom: 46px;
 }
