--- a/src/pages/Login/components/Card/Card.css
+++ b/src/pages/Login/components/Card/Card.css
@@ -1,10 +1,7 @@
 .Card {
-  width: 290px;
-  height: 510px;
   background: #f5f5f5;
-  display: flex;
-  flex-direction: column;
   padding: 80px 105px;
+  padding-bottom: 205px;
 }
 
 .loginLogo {
