--- a/src/pages/Login/components/Input/Input.css
+++ b/src/pages/Login/components/Input/Input.css
@@ -6,14 +6,19 @@
   border: none;
   background-color: #d9d9d9;
   font-family: 'Inter';
-  width: 250px;
   margin-bottom: 37px;
+}
+
+.pass {
+  display: flex;
+  text-align: left;
+  padding-right: 65px;
 }
 
 .loginEye{
   position: absolute;
   right: 20px;
-  top: 15px;
+  top: 112px;
 }
 
 .loginInput::placeholder {
@@ -22,4 +27,6 @@
 
 .loginLabel {
   position: relative;
+  display: flex;
+  flex-flow: column;
 }
