--- a/src/pages/ProductsPage/ProductsPage.css
+++ b/src/pages/ProductsPage/ProductsPage.css
@@ -1,7 +1,8 @@
 .ProductsPage {
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   background: #44B26F;
-  padding: 90px 70px;
+  padding: 90px 70px 110px;
   position: relative;
 }
 
