--- a/src/pages/ProductsPage/components/Button/Button.css
+++ b/src/pages/ProductsPage/components/Button/Button.css
@@ -14,12 +14,12 @@
   background: #d8d8d8;
 }
 
-.butonContainerOne {
+.buttonContainerOne {
   position: absolute;
   left: 70px;
 }
 
-.butonContainerTwo {
+.buttonContainerTwo {
   position: absolute;
   right: 70px;
 }
