--- a/src/pages/ProductsPage/components/ProductsTable/ProductsTable.css
+++ b/src/pages/ProductsPage/components/ProductsTable/ProductsTable.css
@@ -83,18 +83,22 @@
 }
 
 .errorContainer {
-  max-width: 1200px;
+  max-width: 360px;
+  min-height: 400px;
   margin: 0 auto;
-  display: flex;
-  justify-content: center;
   background: silver;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
+  padding: 0 20px;
+  border-radius: 100%;
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+  justify-content: center;
 }
 
 .errorText {
-  font-size: 50px;
+  font-size: 35px;
   font-weight: 600;
   color: red;
+  margin: 0;
 }
 
