--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -39,3 +39,20 @@
   border: none;
   padding: 0;
 }
+
+.ErrorValid {
+  text-align: center;
+  color: white;
+  background: #b24444;
+  font-size: 20px;
+  border: none;
+  font-weight: 600;
+  font-family: 'Inter';
+  width: 100%;
+  border-radius: 12px;
+  padding: 50px 20px;
+  position: absolute;
+  right: 0;
+  left: -20px;
+  top: 250px;
+}
