--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -27,6 +27,11 @@
   color: #44B26F;
 }
 
+.loginInput:focus {
+  outline: none; 
+  box-shadow: #44B26F 1px 0 10px;
+}
+
 
 .buttonEye {
   width: 30px;
@@ -52,7 +57,6 @@
   border-radius: 12px;
   padding: 50px 20px;
   position: absolute;
-  right: 0;
   left: -20px;
   top: 250px;
 }
