--- a/src/pages/Login/components/CardLogin/CardLogin.css
+++ b/src/pages/Login/components/CardLogin/CardLogin.css
@@ -23,9 +23,10 @@
   border: none;
   font-weight: 600;
   font-family: 'Inter';
-  border-radius: 12px;
-  padding: 50px;
+  padding: 30px 0;
+  margin: 0;
   position: absolute;
-  left: 75px;
-  bottom: 20px;
+  left: 0;
+  bottom: 75px;
+  right: 0;
 }
