--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -6,12 +6,9 @@
   border: none;
   background-color: #d9d9d9;
   font-family: 'Inter';
-  margin-bottom: 37px;
-  padding-right: 65px;
 }
 
 .password {
-  display: flex;
   padding: 20px;
   padding-right: 65px;
   font-size: 15px;
@@ -20,12 +17,6 @@
   border: none;
   background-color: #d9d9d9;
   font-family: 'Inter';
-  padding-right: 65px;
-}
-
-.passwordAndButtonEye:focus {
-  outline: none;
-  box-shadow: none;
 }
 
 .loginInput::placeholder {
@@ -51,7 +42,7 @@
   height: 30px;
   position: absolute;
   right: 20px;
-  top: 15px;
+  bottom: 108px;
   cursor: pointer;
   background: transparent;
   border: none;
@@ -61,10 +52,5 @@
 .buttonEye:focus {
   outline: none;
   box-shadow: none;
-}
-
-.passwordContainer {
-  position: relative;
-  margin-bottom: 37px;
 }
 
