--- a/src/pages/Login/components/CardLogin/CardLogin.css
+++ b/src/pages/Login/components/CardLogin/CardLogin.css
@@ -29,3 +29,10 @@
   bottom: 75px;
   right: 0;
 }
+
+.formLoginPage {
+  display: flex;
+  flex-flow: column;
+  gap: 37px;
+  position: relative;
+}
