--- a/src/pages/ProductPreview/ProductPreview.css
+++ b/src/pages/ProductPreview/ProductPreview.css
@@ -1,22 +1,103 @@
-.ProductPreviewPage {
+
+.productPreviewContainer {}
+
+.productPreviewHeader {
   background: #44B26F;
-  min-height: 100vh;
-  padding: 80px 125px;
-  position: relative;
-
-}
-
-.ProductPreviewLogo {
-  position: absolute;
-  top: 20px;
-  left: 30px;
-}
-
-.ProductPreviewContainer {
-  padding: 60px;
+  padding: 20px;
   display: flex;
-  gap: 60px;
-  flex-wrap: wrap;
-  max-width: 1000px;
-  margin: 0 auto;
+  justify-content: left;
 }
+
+.productPreviewButtonBack {
+  background: transparent;
+  border: none;
+  transition: all .2s;
+}
+
+.productPreviewButtonBack:active {
+  transform: scale(0.8);
+}
+
+.productPreviewTitle {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  gap: 25px;
+  color: #D9D9D9;
+}
+
+.productPreviewDescriptionTitle {
+  font-size: 32px;
+  margin: 0;
+}
+
+.productPreviewContainerInner {
+  display: flex;
+  padding: 40px;
+  gap: 80px;
+}
+
+.productPreviewContent {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  gap: 25px;
+}
+
+.productPreviewImage {
+  width: 400px;
+  height: 270px;
+  border-radius: 12px;
+  transition: all .3s;
+}
+
+.productPreviewImage img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.productPreviewStorage {
+  color: #3CD78C;
+  font-size: 36px;
+  margin: 0;
+}
+
+.productPreviewIconCheck {
+  width: 30px;
+  height: 30px;
+}
+
+.productPreviewPrice {
+  font-size: 44px;
+  margin: 0;
+  color: #FC5B00;
+}
+
+.productPreviewQuantity {
+  font-size: 24px;
+  margin: 0;
+}
+
+.productPreviewDescriptionTitleInner {
+  font-size: 32px;
+  display: flex;
+  padding: 30px 40px 20px;
+  align-items: center;
+  gap: 20px;
+}
+
+.productPreviewDescriptionTitleContent {
+  color: #D9D9D9;
+  font-size: 32px;
+  margin: 0;
+}
+
+.productPreviewDescription {
+  padding: 0 40px;
+  display: flex;
+  text-align: left;
+  flex-direction: column;
+  gap: 20px;
+}
+
