--- a/src/pages/PreviewPage/PreviewPage.css
+++ b/src/pages/PreviewPage/PreviewPage.css
@@ -3,7 +3,6 @@
   min-height: 100vh;
   padding: 80px 125px;
   position: relative;
-
 }
 
 .PreviewLogo {
@@ -19,4 +18,23 @@
   flex-wrap: wrap;
   max-width: 1000px;
   margin: 0 auto;
+}
+
+.backButtonProductPage {
+  background: whitesmoke;
+  border: none;
+  color: #44B26F;
+  transition: all .2s;
+  position: absolute;
+  font-size: 16px;
+  left: 200px;
+  top: 90px;
+  border-radius: 14px;
+  padding: 10px 13px 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+.backButtonProductPage:active {
+  transform: scale(0.8);
 }
