--- a/src/pages/ProductPreview/ProductPreview.css
+++ b/src/pages/ProductPreview/ProductPreview.css
@@ -27,7 +27,7 @@
 }
 
 .productPreviewDescriptionTitle {
-  font-size: 32px;
+  font-size: 28px;
   margin: 0;
 }
 
@@ -59,7 +59,7 @@
 
 .productPreviewStorage {
   color: #3CD78C;
-  font-size: 36px;
+  font-size: 30px;
   margin: 0;
 }
 
@@ -69,27 +69,28 @@
 }
 
 .productPreviewPrice {
-  font-size: 44px;
+  font-size: 35px;
   margin: 0;
   color: #FC5B00;
 }
 
 .productPreviewQuantity {
-  font-size: 24px;
+  font-size: 20px;
   margin: 0;
 }
 
 .productPreviewDescriptionTitleInner {
-  font-size: 32px;
+  font-size: 28px;
   display: flex;
   padding: 30px 40px 20px;
   align-items: center;
   gap: 20px;
+  margin: 0;
 }
 
 .productPreviewDescriptionTitleContent {
   color: #D9D9D9;
-  font-size: 32px;
+  font-size: 28px;
   margin: 0;
 }
 
@@ -98,6 +99,14 @@
   display: flex;
   text-align: left;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
+}
+
+.productPreviewDescriptionOne {
+  margin: 0;
+}
+
+.productPreviewDescriptionTwo {
+  font-size: 28px;
 }
 
