--- a/src/pages/PreviewPage/components/CardPreview/CardPreview.css
+++ b/src/pages/PreviewPage/components/CardPreview/CardPreview.css
@@ -17,10 +17,8 @@
 
 .cardImg {
   border-radius: 14px;
-}
-
-.cardImg {
-  border-radius: 14px;
+  width: 220px;
+  height: 160px;
 }
 
 .cardName {
