--- a/src/pages/PreviewPage/PreviewPage.css
+++ b/src/pages/PreviewPage/PreviewPage.css
@@ -12,11 +12,11 @@
 }
 
 .PreviewContainer {
-  padding: 60px;
+  padding: 80px 60px;
   display: flex;
   gap: 60px;
   flex-wrap: wrap;
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
