--- a/src/pages/ProductPreview/ProductPreview.css
+++ b/src/pages/ProductPreview/ProductPreview.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  gap: 25px;
+  justify-content: space-around;
 }
 
 .productPreviewImage {
