--- a/src/pages/ProductPreview/ProductPreview.css
+++ b/src/pages/ProductPreview/ProductPreview.css
@@ -1,5 +1,13 @@
 
-.productPreviewContainer {}
+.productPreviewContainer {
+  position: relative;
+}
+
+.productPreviewSpinnerContainer {
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+}
 
 .productPreviewHeader {
   background: #44B26F;
@@ -99,6 +107,7 @@
   text-align: left;
   flex-direction: column;
   gap: 20px;
+  margin-bottom: 40px;
 }
 
 .productPreviewDescriptionOne {
@@ -109,5 +118,26 @@
 .productPreviewDescriptionTwo {
   font-size: 28px;
   margin-bottom: 10px;
+}
+
+
+.ErrorContainerProductPreview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100vh;
+  background: #44B26F;
+  align-items: center;
+}
+
+.ErrorImageProductPreview {
+  width: 400px;
+  height: 100px;
+}
+
+.ErrorDescriptionProductPreview {
+  font-size: 35px;
+  color:whitesmoke;
+  margin: 0;
 }
 
