--- a/src/pages/ProductPreview/ProductPreview.css
+++ b/src/pages/ProductPreview/ProductPreview.css
@@ -89,7 +89,7 @@
 .productPreviewDescriptionTitleInner {
   font-size: 28px;
   display: flex;
-  padding: 30px 40px 20px;
+  padding: 40px;
   align-items: center;
   gap: 20px;
   margin: 0;
