--- a/src/pages/ProductsPage/ProductsPage.css
+++ b/src/pages/ProductsPage/ProductsPage.css
@@ -3,26 +3,12 @@
   min-height: 100vh;
   padding: 90px 70px 110px;
   position: relative;
-
-  @media (max-width: 400px) {
-    
-  }
 }
-
-
 
 .ProductsLogo {
   position: absolute;
   top: 20px;
   left: 30px;
-
-  @media (max-width: 400px) {
-    top: 30px;
-    left:50%;
-    transform:translate(-50%, -50%);
-    height: 50px;
-    width: 200px;
-  }
 }
 
 .productTitle {
@@ -49,27 +35,7 @@
   color: black;
 }
 
-.Button {
-  color: white;
-  background: #44B26F;
-  height: 56px;
-  font-size: 24px;
-  border: none;
-  font-weight: 600;
-  font-family: 'Inter';
-  width: 100%;
-  border-radius: 12px;
-  padding: 0;
-  transition: all .2s;
-  cursor: pointer;
-}
-
-.Button:active {
-  transform: scale(0.9);
-}
-
-
-.two {
+.buttonPreview {
   color: #05BC52;
   background: white;
   font-size: 16px;
@@ -87,7 +53,7 @@
   transition: all .2s;
 }
 
-.three {
+.buttonAdd {
   color: #05BC52;
   background: white;
   font-size: 16px;
@@ -105,6 +71,10 @@
   transition: all .2s;
 }
 
-.two:active, .three:active {
+.buttonAdd:active {
+  transform: scale(0.9);
+}
+
+.buttonPreview:active {
   transform: scale(0.9);
 }
