--- a/src/mobile/Login/LoginMobile.css
+++ b/src/mobile/Login/LoginMobile.css
@@ -1,7 +1,7 @@
 
 @media (max-width: 400px) {
     .CardLogin {
-      padding: 30px 15px;
+      padding: 30px;
     }
 
     .loginLogo {
@@ -13,7 +13,7 @@
       padding: 30px 0;
       position: absolute;
       left: 0;
-      bottom: -120px;
+      bottom: -110px;
       right: 0;
       border-radius: 12px;
   }
