--- a/src/pages/PreviewPage/components/CardPreview/CardPreview.css
+++ b/src/pages/PreviewPage/components/CardPreview/CardPreview.css
@@ -1,6 +1,6 @@
 .cardContainer {
   background: whitesmoke;
-  padding: 20px;
+  padding: 10px;
   flex: 0 1 25%;
   font-weight: 500;
   font-family: 'Inter';
@@ -17,8 +17,8 @@
 
 .cardImg {
   border-radius: 14px;
-  width: 220px;
-  height: 160px;
+  width: 265px;
+  height: 200px;
 }
 
 .cardName {
@@ -66,4 +66,28 @@
   font-size: 16px;
   color: #05BC52;
   margin: 5px 0;
+}
+
+/********** MOBILE ****************************/
+
+@media (max-width: 400px) {
+  .cardContainer {
+    background: whitesmoke;
+    padding: 5px;
+    font-weight: 500;
+    font-size: 20px;
+    border-radius: 12px;
+    transition: transform .5s;
+  }
+
+  .cardImg {
+    border-radius: 14px;
+    width: 230px;
+    height: 160px;
+  }
+
+  .cardContainer:hover {
+    transform: scale(1);
+    box-shadow: 0px 0px 0px black;
+  }
 }
