--- a/src/pages/PreviewPage/components/CardPreview/CardPreview.css
+++ b/src/pages/PreviewPage/components/CardPreview/CardPreview.css
@@ -32,7 +32,6 @@
 
 .cardContainerInner {
   display: flex;
-  justify-content: center;
   justify-content: space-around;
   align-items: center;
   margin: 10px 0;
@@ -47,6 +46,10 @@
 
 .cardQuantity {
   margin: 0;
+}
+
+.cardQuantityMobile {
+  display: none;
 }
 
 .cardDelivery {
@@ -84,6 +87,35 @@
     border-radius: 14px;
     width: 230px;
     height: 160px;
+  }
+
+  .cardName {
+    text-align: left;
+    margin: 10px 0;
+    margin-left: 7px;
+  }
+
+  .cardCategory {
+    margin: 0;
+    margin-left: 7px;
+    color: #05BC52;
+    text-align: left;
+  }
+
+  .cardContainerInner {
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    margin: 10px 0;
+    gap: 10px;
+  }
+
+
+  .cardDelivery {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
   }
 
   .cardContainer:hover {
