--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 
+
 body {
   margin: 0;
   font-family: 'Inter';
+  font-weight: 600;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
