--- a/src/pages/Login/components/CardLogin/CardLogin.css
+++ b/src/pages/Login/components/CardLogin/CardLogin.css
@@ -15,6 +15,11 @@
   font-size: 23px;
 }
 
+.buttonLogin:focus {
+  outline: none; 
+  box-shadow: #44B26F 1px 0 10px;
+}
+
 .loginLogo {
   margin-bottom: 50px;
 }
