--- a/src/pages/Welcome/Welcome.css
+++ b/src/pages/Welcome/Welcome.css
@@ -20,6 +20,17 @@
   height: 100px;
 }
 
+.buttonStart {
+  background-color: #44B26F;
+  padding: 10px;
+  border-radius: 12px;
+  border: none;
+  color: white;
+  font-size: 20px;
+  border: 1px solid white;
+}
+
+
 /********* MOBILE *****************/
 
 @media (max-width: 400px) {
