--- a/src/router.css
+++ b/src/router.css
@@ -1,4 +1,13 @@
 
+button {
+  font-family: "Inter";
+  font-weight: 600;
+  transition: all .2s;
+}
+
+button:active {
+  transform: scale(0.9);
+}
 
 @font-face {
   font-family: 'Inter';
