del comment + formatCode

--- a/src/pages/ProductsPage/components/ProductsTable/ProductsTable.css
+++ b/src/pages/ProductsPage/components/ProductsTable/ProductsTable.css
@@ -1,11 +1,9 @@
-
-
 .MuiTableRow-head {
   background: white;
 }
 
 .MuiTableRow-root:hover {
-  background: #3CD78C;
+  background: #3cd78c;
 }
 
 .MuiTableCell-body {
@@ -13,15 +11,15 @@
   padding-right: 5px;
 }
 
-.editButton, .deleteButton {
+.editButton,
+.deleteButton {
   color: black;
-  transition: linear .1s;
+  transition: linear 0.1s;
 }
 
 .editButton:active {
   color: blue;
 }
-
 
 .deleteButton:active {
   color: red;
@@ -37,7 +35,7 @@
   border-radius: 14px;
   background: silver;
   padding: 50px 0;
-  border: #0EC86F 5px solid;
+  border: #0ec86f 5px solid;
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
@@ -63,12 +61,12 @@
     display: none;
   }
 
-    .ProductsPage {
+  .ProductsPage {
     padding: 50px 0 20px;
     position: relative;
   }
 
-    .slotName {
+  .slotName {
     font-size: 15px;
     width: 100%;
   }
@@ -80,7 +78,7 @@
   .slotName:last-child {
     display: none;
   }
-  
+
   .slotName:nth-child(5) {
     margin-right: 30px;
   }
@@ -109,11 +107,12 @@
     z-index: -1;
   }
 
-  .buttonEdit, .buttonDelete {
+  .buttonEdit,
+  .buttonDelete {
     display: none;
   }
 
-    .productTableSpinnerContainer {
+  .productTableSpinnerContainer {
     position: fixed;
     top: 50%;
     right: calc(50% - 15px);
@@ -123,13 +122,13 @@
     border-radius: 14px;
     background: silver;
     padding: 20px 0;
-    border: #0EC86F 5px solid;
+    border: #0ec86f 5px solid;
     max-width: 320px;
     margin: 0 auto;
     margin-top: 150px;
     text-align: center;
   }
-  
+
   .errorText {
     font-size: 18px;
     font-weight: 600;
