--- a/src/pages/ProductPreview/ProductPreview.css
+++ b/src/pages/ProductPreview/ProductPreview.css
@@ -1,4 +1,3 @@
-
 .productPreviewContainer {
   position: relative;
 }
@@ -12,7 +11,7 @@
 }
 
 .productPreviewHeader {
-  background: #44B26F;
+  background: #44b26f;
   padding: 20px 30px;
   display: flex;
   justify-content: left;
@@ -21,7 +20,7 @@
 .productPreviewButtonBack {
   background: transparent;
   border: none;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 
 .PreviewButtonIcon {
@@ -41,7 +40,7 @@
   align-items: center;
   padding: 20px;
   gap: 25px;
-  color: #D9D9D9;
+  color: #d9d9d9;
 }
 
 .productPreviewDescriptionTitle {
@@ -74,7 +73,7 @@
 }
 
 .productPreviewStorage {
-  color: #3CD78C;
+  color: #3cd78c;
   font-size: 30px;
   margin: 0;
 }
@@ -93,7 +92,7 @@
 .productPreviewPrice {
   font-size: 35px;
   margin: 0;
-  color: #FC5B00;
+  color: #fc5b00;
 }
 
 .productPreviewQuantity {
@@ -111,7 +110,7 @@
 }
 
 .productPreviewDescriptionTitleContent {
-  color: #D9D9D9;
+  color: #d9d9d9;
   font-size: 28px;
   margin: 0;
 }
@@ -135,13 +134,12 @@
   margin-bottom: 10px;
 }
 
-
 .ErrorContainerProductPreview {
   display: flex;
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  background: #44B26F;
+  background: #44b26f;
   align-items: center;
 }
 
@@ -152,12 +150,11 @@
 
 .ErrorDescriptionProductPreview {
   font-size: 35px;
-  color:whitesmoke;
+  color: whitesmoke;
   margin: 0;
 }
 
 /******** MOBILE ********************/
-
 
 @media (max-width: 400px) {
   .productPreviewSpinnerContainer {
@@ -168,8 +165,8 @@
     height: 40px;
   }
 
-.productPreviewHeader {
-    background: #44B26F;
+  .productPreviewHeader {
+    background: #44b26f;
     padding: 30px;
     display: flex;
     justify-content: center;
@@ -182,7 +179,7 @@
     height: 30px;
     top: 30px;
     left: 50%;
-    transform:translate(-50%, -50%);
+    transform: translate(-50%, -50%);
   }
 
   .productPreviewButtonBack {
@@ -212,7 +209,7 @@
   .backButtonProductPage {
     display: none;
   }
-  
+
   .backButtonProductPage:active {
     transform: scale(0.8);
   }
@@ -220,7 +217,7 @@
   .productPreviewTitle {
     display: block;
     text-align: center;
-    color: #D9D9D9;
+    color: #d9d9d9;
     padding: 0;
     margin: 10px 0;
   }
@@ -283,7 +280,7 @@
     font-size: 15px;
     line-height: 140%;
   }
-  
+
   .productPreviewDescriptionTwo {
     font-size: 20px;
     margin-bottom: 8px;
@@ -294,19 +291,19 @@
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    background: #44B26F;
+    background: #44b26f;
     align-items: center;
     padding: 0;
     margin: 0;
   }
-  
+
   .ErrorImageProductPreview {
     width: 200px;
     height: 40px;
   }
-  
+
   .ErrorDescriptionProductPreview {
     font-size: 20px;
-    color:whitesmoke;
+    color: whitesmoke;
   }
 }
