--- a/src/pages/ProductsPage/ProductsPage.css
+++ b/src/pages/ProductsPage/ProductsPage.css
@@ -1,7 +1,7 @@
 .ProductsPage {
   background: #44B26F;
   min-height: 100vh;
-  padding: 90px 70px 110px;
+  padding: 6rem 3rem;
   position: relative;
 }
 
