--- a/src/router.css
+++ b/src/router.css
@@ -1,3 +1,5 @@
+@import "./styles/fonts.css";
+@import "./styles/reset.css";
 
 button {
   font-weight: 600;
@@ -9,16 +11,7 @@ button:active {
   transform: scale(0.9);
 }
 
-@font-face {
-  font-family: 'Inter';
-  src: url('./fonts/Inter-SemiBold.woff2') format('woff2'),
-      url('./fonts/Inter-SemiBold.woff') format('woff');
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-
 .App {
-  text-align: center;
   font-family: 'Inter';
+  font-weight: 400;
 }
