--- a/src/styles/Error.module.css
+++ b/src/styles/Error.module.css
@@ -3,31 +3,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 206.5px);
   background: #44B26F;
   align-items: center;
 }
 
 .ErrorImage {
   width: 300px;
-  height: 100px;
+  margin: -80px 0 30px 0;
 }
 
 .ErrorDescription {
   font-size: 35px;
   color:whitesmoke;
-  margin: 0;
-}
-
-/**************** MOBILE ******************/
-
-@media (max-width: 400px) {
-  .ErrorImage {
-  width: 250px;
-  height: 50px;
-}
-
-  .ErrorDescription {
-  font-size: 20px;
-}
+  font-weight: 700;
 }
