--- a/src/styles/CardLogin.module.css
+++ b/src/styles/CardLogin.module.css
@@ -1,14 +1,28 @@
 .CardLoginContainer {
   position: absolute;
-  top: 30%;
+  top: 40%;
   left: 50%;
-  transform: translateX(-50%) translateY(-30%);
+  transform: translateX(-50%) translateY(-40%);
 }
 
 .CardLogin {
   background: #f5f5f5;
-  padding: 30px 80px;
+  padding: 30px 80px 35px;
   border-radius: 12px;
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 25px;
+}
+
+.loginLogo {
+}
+
+.formLoginPage {
+  display: flex;
+  flex-flow: column;
+  gap: 25px;
   position: relative;
 }
 
@@ -79,7 +93,7 @@
 
 .buttonLogin {
   background-color: #44B26F;
-  padding: 10px 0;
+  padding: 16px 0;
   border-radius: 12px;
   border: none;
   color: white;
@@ -93,35 +107,29 @@
 
 .buttonLogin:focus {
   outline: none; 
-  box-shadow: #44B26F 1px 0 10px;
+  box-shadow: #44B26F 1px 0 4px;
 }
 
-.loginLogo {
-  margin-bottom: 50px;
-}
-
-.inputLogin {
-  margin-bottom: 46px;
-}
-
-.ErrorValid {
+.cardError {
   text-align: center;
-  color: white;
   background: #b24444;
-  font-size: 20px;
-  font-weight: 600;
-  font-family: 'Inter';
-  padding: 30px 0;
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+  padding: 34px 0;
   position: absolute;
   left: 0;
   right: 0;
-  top: 20px;
+  bottom: 0;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
-.formLoginPage {
-  display: flex;
-  flex-flow: column;
-  gap: 37px;
-  position: relative;
+.ErrorValid {
+  font-size: 20px;
+  color: white;
+  font-weight: 600;
+  font-family: 'Inter';
+  text-transform: uppercase;
 }
