--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -2,6 +2,10 @@
 .header {
   background: #44b26f;
   padding: 30px;
+  height: 103px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
