--- a/src/styles/CardLogin.module.css
+++ b/src/styles/CardLogin.module.css
@@ -6,7 +6,7 @@
 }
 
 .CardLogin {
-  background: #f5f5f5;
+  background: #F5F5FA;
   padding: 30px 80px 35px;
   border-radius: 12px;
   position: relative;
@@ -26,46 +26,43 @@
   position: relative;
 }
 
+.inputPass {
+  position: relative;
+  font-weight: 500;
+}
+
 .loginInput {
   font-size: 15px;
   border-radius: 12px;
   padding: 20px;
-  font-weight: 600;
+  font-weight: 500;
   border: none;
   background-color: #d9d9d9;
   font-family: 'Inter';
+  color: #44B26F;
 }
 
-.password {
+.passwordInput {
   padding: 20px;
   padding-right: 65px;
   font-size: 15px;
   border-radius: 12px;
   font-weight: 600;
   border: none;
+  font-family: 'Inter';
   background-color: #d9d9d9;
-}
-
-.loginInput::placeholder {
   color: #44B26F;
 }
 
-.loginInput:focus {
-  outline: none; 
-  box-shadow: #44B26F 1px 0 10px;
-}
-
-.password::placeholder {
+.loginInput::placeholder, .passwordInput::placeholder {
   color: #44B26F;
+  letter-spacing: 1px;
+  font-weight: 500;
 }
 
-.password:focus {
+.loginInput:focus, .passwordInput:focus {
   outline: none; 
   box-shadow: #44B26F 1px 0 10px;
-}
-
-.inputPass {
-  position: relative;
 }
 
 .buttonEye {
