--- a/src/styles/ProductsTable.module.css
+++ b/src/styles/ProductsTable.module.css
@@ -4,12 +4,11 @@
 }
 
 .tableRow:hover {
-  background: #278956e9;
+  background: #E6E6F0;
   cursor: pointer;
 }
 
 .name:hover {
-  color: white;
   text-decoration: 1px underline;
 }
 
@@ -20,11 +19,11 @@
 }
 
 .editButton:active {
-  color: rgb(0, 166, 255);
+  color: #24A3FF;
 }
 
 .deleteButton:active {
-  color: rgb(229, 11, 11);
+  color: #F0145A;
 }
 
 .tableRow:last-child .rows, .tableRow:last-child .name {
