--- a/src/styles/User.module.css
+++ b/src/styles/User.module.css
@@ -9,10 +9,14 @@
   display: flex;
 }
 
+.name {
+  padding: 0 5px;
+}
+
 .contr {
   display: none;
   position: absolute;
-  top: 11px;
+  top: 10px;
   right: 90px;
   border-radius: 12px;
   transition: all 1s;
