--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -8,6 +8,14 @@
 
 @font-face {
   font-family: 'Inter';
+  src: url('../fonts/Inter18pt-Medium.woff2') format('woff2'),
+      url('../fonts/Inter18pt-Medium.woff') format('woff');
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
   src: url('../fonts/Inter-SemiBold.woff2') format('woff2'),
       url('../fonts/Inter-SemiBold.woff') format('woff');
   font-weight: 600;
