--- a/src/router.css
+++ b/src/router.css
@@ -7,9 +7,9 @@ button {
   transition: all .2s;
 }
 
-button:active {
+/* button:active {
   transform: scale(0.98);
-}
+} */
 
 .App {
   font-family: 'Inter';
