--- a/src/styles/ProductPreview.module.css
+++ b/src/styles/ProductPreview.module.css
@@ -42,6 +42,13 @@
   max-height: 500px;
 }
 
+.noImage {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  width: 400px;
+  height: 400px;
+}
+
 .blockInfo {
   grid-column: 2/3;
   grid-row: 1/2;
