--- a/src/styles/ProductPreview.module.css
+++ b/src/styles/ProductPreview.module.css
@@ -38,8 +38,8 @@
 .blockImage {
   grid-column: 1/2;
   grid-row: 1/3;
-  max-width: 550px;
-  max-height: 500px;
+  max-width: 500px;
+  height: 500px;
 }
 
 .noImage {
@@ -105,12 +105,6 @@
 .descriptions {
   line-height: 1.5;
   font-weight: 400;
-}
-
-.image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .storageZero {
