--- a/src/styles/ProductPreview.module.scss
+++ b/src/styles/ProductPreview.module.scss
@@ -1,3 +1,4 @@
+@use "./vars";
 
 .spinner {
   position: absolute;
@@ -13,7 +14,9 @@
   padding: 30px;
 }
 
-.container {}
+.container {
+  background: vars.$basicWhite;
+}
 
 .buttonBack {
   display: flex;
