--- a/src/styles/User.module.scss
+++ b/src/styles/User.module.scss
@@ -1,11 +1,12 @@
+@use "./vars" as *;
 
 .link {
   text-decoration: none;
   position: relative;
-  color: white;
+  color: $basicBlack;
 }
 
-.link:hover > .contr {
+.link:hover > .containerButton {
   display: flex;
 }
 
@@ -13,7 +14,7 @@
   padding: 0 5px;
 }
 
-.contr {
+.containerButton {
   display: none;
   position: absolute;
   top: 10px;
@@ -58,4 +59,22 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+//? MOBILE ---------------------------------------------------------------
+@media (max-width: 425px) {
+  .link:hover > .containerButton {
+    display: flex;
+  }
+
+  .containerButton {
+    display: none;
+    position: absolute;
+    top: 50px;
+    right: -20px;
+    border-radius: 12px;
+    transition: all 1s;
+    padding: 0 10px 0 0;
+    gap: 10px;
+  }
 }
