--- a/src/styles/ProductsPage.module.scss
+++ b/src/styles/ProductsPage.module.scss
@@ -25,6 +25,7 @@
 }
 
 .container {
+  color: white;
 }
 
 .containerTitle {
@@ -54,26 +55,53 @@
   cursor: pointer;
 }
 
-.error {
-  background: #44B26F;
-  min-height: calc(100vh - 210px);
-  padding: 30px;
-  position: relative;
-}
-
-.errorTitle {
-  font-weight: 700;
-  font-size: 30px;
-  color: white;
-}
-
 .errorContainer {
   display: flex;
   flex-flow: column;
-  gap: 10px;
+  gap: 20px;
   align-items: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+}
+
+.errorTitle {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 30px;
+  color: white;
+}
+
+// MOBILE ---------------------------------------------------------------
+@media (max-width: 425px) {
+  .products {
+    min-height: calc(100vh - 160px);
+    padding: 30px 5px;
+    max-width: 1536px;
+    margin: 0 auto;
+  }
+  
+  .title {
+    font-size: 16px;
+    text-transform: uppercase;
+  }
+  
+  .buttonContainer {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .buttonPreview, .buttonAdd {
+    font-size: 12px;
+    padding: 10px;
+    gap: 5px;
+  }
+  
+  .errorTitle {
+    font-weight: 600;
+    font-size: 16px;
+    color: white;
+  }
 }
