--- a/src/styles/Slider.scss
+++ b/src/styles/Slider.scss
@@ -6,6 +6,10 @@
   border-radius: 12px;
 }
 
+.swiper-wrapper {
+  align-items: center;
+}
+
 .swiper-slide {
   max-width: 500px;
   max-height: 510px;
