--- a/src/styles/Error.module.scss
+++ b/src/styles/Error.module.scss
@@ -19,7 +19,7 @@
   }
 }
 
-//? MOBILE ---------------------------------------------------------------
+// MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
   .Error {
     min-height: calc(100vh - 160px);
