--- a/src/styles/CardLogin.module.scss
+++ b/src/styles/CardLogin.module.scss
@@ -9,7 +9,7 @@
 
 .CardLogin {
   background: #F5F5FA;
-  padding: 30px 80px 35px;
+  padding: 30px 50px 35px;
   border-radius: 12px;
   position: relative;
   display: flex;
@@ -17,9 +17,6 @@
   align-items: center;
   gap: 25px;
   font-weight: 600;
-}
-
-.loginLogo {
 }
 
 .formLoginPage {
@@ -135,14 +132,13 @@
 }
 
 
-
-//? MOBILE ---------------------------------------------------------------
+// MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
   .CardLoginContainer {
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-40%);
+    transform: translateX(-50%) translateY(-50%);
   }
   
   .CardLogin {
