--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -10,19 +10,17 @@
   position: relative;
 }
 
-.logo {
-}
-
 .navButton {
   background: transparent;
   cursor: pointer;
 }
 
-//? MOBILE ---------------------------------------------------------------
+// MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
   .header {
     padding: 20px 30px;
     height: 80px;
+    border-bottom: 1px solid $basicWhite;
   }
   
   .logo {
