--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -4,7 +4,7 @@
   position: relative;
 }
 
-//? MOBILE ---------------------------------------------------------------
+// MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
   .login {
     min-height: calc(100vh - 160px);
