--- a/src/styles/PreviewPage.module.scss
+++ b/src/styles/PreviewPage.module.scss
@@ -1,3 +1,5 @@
+@use "vars" as *;
+
 
 .spinner {
   position: absolute;
@@ -7,14 +9,14 @@
 }
 
 .preview {
-  background: #44B26F;
+  background: $bgGreen;
   min-height: calc(100vh - 210px);
 }
 
 .container {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 30px 30px 0;
 }
 
 .buttonBack {
@@ -22,7 +24,7 @@
   align-items: center;
   gap: 5px;
   background: transparent;
-  color: white;
+  color: $basicWhite;
   transition: linear .2s;
   text-transform: uppercase;
   cursor: pointer;
@@ -37,7 +39,7 @@
 }
 
 .error {
-  background: #44B26F;
+  background: $bgGreen;
   min-height: calc(100vh - 210px);
   position: relative;
 }
@@ -53,16 +55,16 @@
   align-items: center;
 }
 
-.title {
+.errorDescriptions {
   font-size: 30px;
   font-weight: 700;
-  color: white;
+  color: $basicWhite;
 }
 
 .wrapperSkull {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 30px 30px 0;
 }
 
 .containerSkull {
@@ -82,4 +84,46 @@
 .skull {
   border-radius: 12px;
   height: 350px !important;
+}
+
+
+
+// MOBILE ---------------------------------------------------------------
+@media (max-width: 425px) {
+  .preview {
+    min-height: calc(100vh - 160px);
+  }
+  
+  .buttonBack {
+    padding: 10px;
+    background: $basicWhite;
+    color: $greyColor;
+    border-radius: $radius-md;
+  }
+  
+  .cards {
+    padding: 30px 0;
+    gap: 30px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+
+  .error {
+    min-height: calc(100vh - 160px);
+  }
+  
+  .errorDescriptions {
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+  }
+  
+  .containerSkull {
+    padding: 30px 0;
+    gap: 30px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
 }
