--- a/src/styles/Slider.scss
+++ b/src/styles/Slider.scss
@@ -1,4 +1,6 @@
 
+@use "vars" as *;
+
 .myImage {
   width: 100%;
   height: 100%;
@@ -40,4 +42,66 @@
   width: 14px;
   height: 14px;
   background: #44b26f;
+}
+
+// MOBILE ---------------------------------------------------------------
+@media (max-width: 375px) {
+  .swiper {
+    position: static;
+  }
+
+  .swiper-slide {
+    max-width: 360px;
+    max-height: 385px;
+    margin-bottom: 10px;
+  }
+
+  .swiper-button-next {
+    right: -15px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 5;
+    background: #EDEDF7;
+  }
+
+  .swiper-button-prev {
+    left: -15px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 5;
+    background: #EDEDF7;
+  }
+}
+
+
+@media (max-width: 425px) {
+  .swiper {
+    position: static;
+  }
+
+  .swiper-slide {
+    max-width: 360px;
+    max-height: 385px;
+    margin-bottom: 10px;
+  }
+
+  .swiper-button-next {
+    right: -25px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 5;
+    background: #EDEDF7;
+  }
+
+  .swiper-button-prev {
+    left: -25px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 5;
+    background: #EDEDF7;
+  }
 }
