--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,23 +1,22 @@
 
-//? COLORS:
+// COLORS:
 $redAccent: #f0145a;
 $bgGreen: #44B26F;
 $basicWhite: white;
 $basicBlack: black;
 $textColor: #B3B3BA;
-$softColor: #686887;
 $greyColor: #726969;
 $bgColor: #F5F5FA;
 $bgAlt: #EDEDF7;
 $separatorColor: #E6E6F0;
 
-//? RADIUS:
+// RADIUS:
 $radius-sm: 8px;
 $radius-md: 12px;
 $radius-xl: 24px;
 $radius-rounded: 50%;
 
-//? BREAKPOINTS
+// BREAKPOINTS
 $breakpoint-md: 768px;
 $breakpoint-lg: 1024px;
 $breakpoint-xl: 1440px;
